--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </div>
       <div class="row heading">
         <div class="span12">
-          <h1>Bitstarter Title</h1>
+          <h1>SnapCalc</h1>
         </div>
       </div> 
      <div class="row subheading">
